// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`competing style priority 1`] = `
";

() => create(Foo, {}, create(Bar, {
  \\"className\\": \\"Bar_24g\\"
}));

CSS.put(\`
	.Bar_24g { color: red }
\`);"
`;

exports[`competing style priority 2`] = `
";

() => <Foo><Bar className=\\"Bar_24g\\" /></Foo>;

CSS.put(\`
	.Bar_24g { color: red }
\`);"
`;
